spree-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spree-backend
  namespace: interna
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spree-backend
  template:
    metadata:
      labels:
        app: spree-backend
    spec:
      nodeSelector:
        zona: interna
      containers:
        - name: spree
          image: spree-custom:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
