spree-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spree-backend
  namespace: interna
spec:
  selector:
    app: spree-backend
  ports:
    - port: 3000
      targetPort: 3000
